css for home slider - fixing overlapped flex-nav

--- a/css/template-home.less
+++ b/css/template-home.less
@@ -22,6 +22,8 @@ section.hero{
 				font-size: 14/16em;
 				text-align: left;
 			}
+			//@todo: if captions added back, remove padding
+			padding-bottom: 10px;
 		}
 		.flex-control-nav{
 			bottom: 0;
